--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
     <p><b>Height:</b> 3m</p>
     <br>
 
+    <h2>Kenguru</h2>
+    <img width=350px src="pictures/kenguru.jpg">
+    <p><b>Area:</b>Australia</p>
+    <p><b>Weight:</b> 100-200kg</p>
+    <p><b>Height:</b> 2m</p>
+    <br>
+
   </body>
 </html>
