--- a/index.html
+++ b/index.html
@@ -1,19 +1,13 @@
 <!DOCTYPE html>
 <html>
-
   <head>
     <title>Wild Animals Blog</title>
     <meta charset="utf-8">
   </head>
-
   <body align=center>
-
     <img width=100px src="pictures/paw_print.jpg">
-    <h1>Wild Animals</h1>
+    <h1>Wild Animals of the World</h1>
     <small>- Blog about nature -</small>
-
-    <br>
-    <br>
     <br>
     <br>
 
