Коммит с ветки new_branch

--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
   </head>
   <body align=center>
     <img width=100px src="pictures/paw_print.jpg">
-    <h1>Wild Animals of the World</h1>
+    <h1>Wild Animals of the World contry</h1>
     <small>- Blog about nature -</small>
     <br>
     <br>
-
     <p>Let's talk about wild animals around the world:</p>
     <h2>Giraffe</h2>
     <img src="pictures/giraffe.jpg">
