Коммит с ветки master

--- a/index.html
+++ b/index.html
@@ -10,15 +10,13 @@
     <small>- Blog about nature -</small>
     <br>
     <br>
-
-    <p>Let's talk about wild animals around the world:</p>
+    <p>Let's talk about wild animals around the World:</p>
     <h2>Giraffe</h2>
     <img src="pictures/giraffe.jpg">
     <p><b>Area:</b> Africa</p>
     <p><b>Weight:</b> 900-1200kg</p>
     <p><b>Height:</b> 6m</p>
     <br>
-
     <h2>Elephant</h2>
     <img width=350px src="pictures/elephant.jpg">
     <p><b>Area:</b> Africa, Asia</p>
